--- a/public/css/style.css
+++ b/public/css/style.css
@@ -75,18 +75,27 @@ footer {
   color: white;
   margin: 0;
   text-align: left;
-  line-height: 0.8px;
 }
 
 footer a {
   color: white;
   text-decoration: none;
+  background-color: #353535;
+}
+
+footer p {
+  line-height: 0.5px;
+  font-size: 1.4em;
 }
 
 footer h1 {
+  font-size: 1.5em;
   color: white;
   text-decoration: none;
-  margin: 2em 0 0 0;
+  margin: 0 0 0 0;
+  background-color: #353535;
+  top: 10em;
+  bottom: 20em;
 }
 
 /*debut code pour la premier animation****************************************************************************/
@@ -319,6 +328,10 @@ a {
   text-decoration: none;
 }
 
+main p a {
+  color: black;
+}
+
 body {
   color: black;
   z-index: 0;
@@ -515,6 +528,26 @@ main {
   width: 79%;
 }
 
+.black {
+  color: black;
+}
+
+.black:hover {
+  color: black;
+}
+
+.black:active {
+  color: black;
+}
+
+.black:link {
+  color: black;
+}
+
+.black:visited {
+  color: black;
+}
+
 .restaurants__bas__coeur {
   width: 19%;
 }
@@ -669,7 +702,6 @@ main {
   margin: 0;
   width: 100%;
   height: 100%;
-  box-shadow: 0em 0.15em 0.1em #d5d5d5;
 }
 
 /*# sourceMappingURL=style.css.map */
