--- a/sass/layouts/_footer.scss
+++ b/sass/layouts/_footer.scss
@@ -9,14 +9,22 @@ footer {
   color: white;
   margin: 0;
   text-align: left;
-  line-height: 0.8px;
 }
 footer a {
   color: white;
   text-decoration: none;
+  background-color: $colour-footer;
+}
+footer p {
+  line-height: 0.5px;
+  font-size: 1.4em;
 }
 footer h1 {
+  font-size: 1.5em;
   color: white;
   text-decoration: none;
-  margin: 2em 0 0 0;
+  margin: 0 0 0 0;
+  background-color: $colour-footer;
+  top: 10em;
+  bottom: 20em;
 }
