--- a/sass/utils/_animation.scss
+++ b/sass/utils/_animation.scss
@@ -292,3 +292,16 @@
 }
 
 /*fin animation coeur*/
+.header__bas__btn {
+  background: linear-gradient(160deg, $colour-secondary, $colour-primary);
+  color: white;
+  border-radius: 50px;
+  text-align: center;
+  width: 75%;
+  margin: auto;
+  margin-bottom: 20px;
+  &:hover {
+    opacity: 0.6;
+    box-shadow: 1em 1em 1em $colour-footer;
+  }
+}
