--- a/sass/utils/_variables.scss
+++ b/sass/utils/_variables.scss
@@ -13,3 +13,6 @@ $colour-primary7: rgba(147, 86, 220, 0.7);
 $colour-secondary2: rgba(255, 121, 218, 0.2);
 $colour-secondary5: rgba(255, 121, 218, 0.5);
 $colour-secondary7: rgba(255, 121, 218, 0.7);
+$colour-restaurants-font: #f6f6f6;
+
+$restaurants__card-shad: #353535;
