mise en place du coeur sur les menue et du titre H2 a cotez

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -2487,7 +2487,19 @@ main {
   margin-top: -1.8em;
   padding-top: 1em;
   background-color: #f6f6f6;
+  display: flex;
+  flex-direction: row;
   width: 100%;
+}
+
+.header__box {
+  display: inline-block;
+  width: 80%;
+}
+
+.header__box2 {
+  display: inline-block;
+  width: 80%;
 }
 
 .header__img--box {
@@ -2585,6 +2597,26 @@ main {
 
 .roboto--font {
   margin: 0;
+}
+
+.header__titre__bas {
+  display: flex;
+  flex-direction: row;
+  margin-top: 0em;
+  height: 25%;
+  width: 100%;
+  margin: auto;
+}
+
+.header__titre__bas__gauche {
+  width: 60%;
+  font-size: 1.3em;
+  left: 0em;
+}
+
+.header__titre__bas__droit {
+  width: 35%;
+  font-size: 1, 2em;
 }
 
 /*# sourceMappingURL=style.css.map */
