correction animation abracadabra

--- a/sass/utils/_animation.scss
+++ b/sass/utils/_animation.scss
@@ -316,8 +316,8 @@
   animation-fill-mode: both;
   animation-delay: 0ms;
   animation-iteration-count: 1;
-  -webkit-animation: abracadabra1 5s;
-  animation: abracadabra2 5s;
+  -webkit-animation: abracadabra1 3s;
+  animation: abracadabra2 3s;
   -webkit-transform: translateY(0);
   -ms-transform: translateY(0);
   transform: translateY(0);
@@ -504,8 +504,8 @@
   animation-fill-mode: both;
   animation-delay: 0ms;
   animation-iteration-count: 1;
-  -webkit-animation: abracadabra3 5s;
-  animation: abracadabra4 5s;
+  -webkit-animation: abracadabra3 3s;
+  animation: abracadabra4 3s;
   -webkit-transform: translateY(0);
   -ms-transform: translateY(0);
   transform: translateY(0);
@@ -692,8 +692,8 @@
   animation-fill-mode: both;
   animation-delay: 0ms;
   animation-iteration-count: 1;
-  -webkit-animation: abracadabra5 5s;
-  animation: abracadabra6 5s;
+  -webkit-animation: abracadabra5 3s;
+  animation: abracadabra6 3s;
   -webkit-transform: translateY(0);
   -ms-transform: translateY(0);
   transform: translateY(0);
@@ -733,10 +733,10 @@
     opacity: 1;
   }
   40% {
-    -webkit-transform: translateY(+100px);
-    -ms-transform: translateY(+100px);
-    transform: translateY(+100px);
-    opacity: 0;
+    -webkit-transform: translateY(0);
+    -ms-transform: translateY(0);
+    transform: translateY(0);
+    opacity: 1;
   }
   48% {
     -webkit-transform: translateY(0);
@@ -880,8 +880,8 @@
   animation-fill-mode: both;
   animation-delay: 0ms;
   animation-iteration-count: 1;
-  -webkit-animation: abracadabra7 5s;
-  animation: abracadabra8 5s;
+  -webkit-animation: abracadabra7 3s;
+  animation: abracadabra8 3s;
   -webkit-transform: translateY(0);
   -ms-transform: translateY(0);
   transform: translateY(0);
@@ -1068,8 +1068,8 @@
   animation-fill-mode: both;
   animation-delay: 0ms;
   animation-iteration-count: 1;
-  -webkit-animation: abracadabra9 5s;
-  animation: abracadabra10 5s;
+  -webkit-animation: abracadabra9 3s;
+  animation: abracadabra10 3s;
   -webkit-transform: translateY(0);
   -ms-transform: translateY(0);
   transform: translateY(0);
@@ -1256,8 +1256,8 @@
   animation-fill-mode: both;
   animation-delay: 0ms;
   animation-iteration-count: 1;
-  -webkit-animation: abracadabra11 5s;
-  animation: abracadabra12 5s;
+  -webkit-animation: abracadabra11 3s;
+  animation: abracadabra12 3s;
   -webkit-transform: translateY(0);
   -ms-transform: translateY(0);
   transform: translateY(0);
@@ -1444,8 +1444,8 @@
   animation-fill-mode: both;
   animation-delay: 0ms;
   animation-iteration-count: 1;
-  -webkit-animation: abracadabra13 5s;
-  animation: abracadabra14 5s;
+  -webkit-animation: abracadabra13 3s;
+  animation: abracadabra14 3s;
   -webkit-transform: translateY(0);
   -ms-transform: translateY(0);
   transform: translateY(0);
@@ -1632,8 +1632,8 @@
   animation-fill-mode: both;
   animation-delay: 0ms;
   animation-iteration-count: 1;
-  -webkit-animation: abracadabra15 5s;
-  animation: abracadabra16 5s;
+  -webkit-animation: abracadabra15 3s;
+  animation: abracadabra16 3s;
   -webkit-transform: translateY(0);
   -ms-transform: translateY(0);
   transform: translateY(0);
@@ -1820,8 +1820,8 @@
   animation-fill-mode: both;
   animation-delay: 0ms;
   animation-iteration-count: 1;
-  -webkit-animation: abracadabra17 5s;
-  animation: abracadabra18 5s;
+  -webkit-animation: abracadabra17 3s;
+  animation: abracadabra18 3s;
   -webkit-transform: translateY(0);
   -ms-transform: translateY(0);
   transform: translateY(0);
@@ -2008,8 +2008,8 @@
   animation-fill-mode: both;
   animation-delay: 0ms;
   animation-iteration-count: 1;
-  -webkit-animation: abracadabra19 5s;
-  animation: abracadabra20 5s;
+  -webkit-animation: abracadabra19 3s;
+  animation: abracadabra20 3s;
   -webkit-transform: translateY(0);
   -ms-transform: translateY(0);
   transform: translateY(0);
