--- a/public/css/style.css
+++ b/public/css/style.css
@@ -367,8 +367,8 @@ footer h1 {
   animation-fill-mode: both;
   animation-delay: 0ms;
   animation-iteration-count: 1;
-  -webkit-animation: abracadabra1 5s;
-  animation: abracadabra2 5s;
+  -webkit-animation: abracadabra1 3s;
+  animation: abracadabra2 3s;
   -webkit-transform: translateY(0);
   -ms-transform: translateY(0);
   transform: translateY(0);
@@ -553,8 +553,8 @@ footer h1 {
   animation-fill-mode: both;
   animation-delay: 0ms;
   animation-iteration-count: 1;
-  -webkit-animation: abracadabra3 5s;
-  animation: abracadabra4 5s;
+  -webkit-animation: abracadabra3 3s;
+  animation: abracadabra4 3s;
   -webkit-transform: translateY(0);
   -ms-transform: translateY(0);
   transform: translateY(0);
@@ -739,8 +739,8 @@ footer h1 {
   animation-fill-mode: both;
   animation-delay: 0ms;
   animation-iteration-count: 1;
-  -webkit-animation: abracadabra5 5s;
-  animation: abracadabra6 5s;
+  -webkit-animation: abracadabra5 3s;
+  animation: abracadabra6 3s;
   -webkit-transform: translateY(0);
   -ms-transform: translateY(0);
   transform: translateY(0);
@@ -779,10 +779,10 @@ footer h1 {
     opacity: 1;
   }
   40% {
-    -webkit-transform: translateY(100px);
-    -ms-transform: translateY(100px);
-    transform: translateY(100px);
-    opacity: 0;
+    -webkit-transform: translateY(0);
+    -ms-transform: translateY(0);
+    transform: translateY(0);
+    opacity: 1;
   }
   48% {
     -webkit-transform: translateY(0);
@@ -925,8 +925,8 @@ footer h1 {
   animation-fill-mode: both;
   animation-delay: 0ms;
   animation-iteration-count: 1;
-  -webkit-animation: abracadabra7 5s;
-  animation: abracadabra8 5s;
+  -webkit-animation: abracadabra7 3s;
+  animation: abracadabra8 3s;
   -webkit-transform: translateY(0);
   -ms-transform: translateY(0);
   transform: translateY(0);
@@ -1111,8 +1111,8 @@ footer h1 {
   animation-fill-mode: both;
   animation-delay: 0ms;
   animation-iteration-count: 1;
-  -webkit-animation: abracadabra9 5s;
-  animation: abracadabra10 5s;
+  -webkit-animation: abracadabra9 3s;
+  animation: abracadabra10 3s;
   -webkit-transform: translateY(0);
   -ms-transform: translateY(0);
   transform: translateY(0);
@@ -1297,8 +1297,8 @@ footer h1 {
   animation-fill-mode: both;
   animation-delay: 0ms;
   animation-iteration-count: 1;
-  -webkit-animation: abracadabra11 5s;
-  animation: abracadabra12 5s;
+  -webkit-animation: abracadabra11 3s;
+  animation: abracadabra12 3s;
   -webkit-transform: translateY(0);
   -ms-transform: translateY(0);
   transform: translateY(0);
@@ -1483,8 +1483,8 @@ footer h1 {
   animation-fill-mode: both;
   animation-delay: 0ms;
   animation-iteration-count: 1;
-  -webkit-animation: abracadabra13 5s;
-  animation: abracadabra14 5s;
+  -webkit-animation: abracadabra13 3s;
+  animation: abracadabra14 3s;
   -webkit-transform: translateY(0);
   -ms-transform: translateY(0);
   transform: translateY(0);
@@ -1669,8 +1669,8 @@ footer h1 {
   animation-fill-mode: both;
   animation-delay: 0ms;
   animation-iteration-count: 1;
-  -webkit-animation: abracadabra15 5s;
-  animation: abracadabra16 5s;
+  -webkit-animation: abracadabra15 3s;
+  animation: abracadabra16 3s;
   -webkit-transform: translateY(0);
   -ms-transform: translateY(0);
   transform: translateY(0);
@@ -1855,8 +1855,8 @@ footer h1 {
   animation-fill-mode: both;
   animation-delay: 0ms;
   animation-iteration-count: 1;
-  -webkit-animation: abracadabra17 5s;
-  animation: abracadabra18 5s;
+  -webkit-animation: abracadabra17 3s;
+  animation: abracadabra18 3s;
   -webkit-transform: translateY(0);
   -ms-transform: translateY(0);
   transform: translateY(0);
@@ -2041,8 +2041,8 @@ footer h1 {
   animation-fill-mode: both;
   animation-delay: 0ms;
   animation-iteration-count: 1;
-  -webkit-animation: abracadabra19 5s;
-  animation: abracadabra20 5s;
+  -webkit-animation: abracadabra19 3s;
+  animation: abracadabra20 3s;
   -webkit-transform: translateY(0);
   -ms-transform: translateY(0);
   transform: translateY(0);
